2008-08-19  Jonathan Pryor  <jpryor@novell.com>

	* Generator.pm: Added; utility type for C# source generation.
	* mkcurry: Added; generator for Mono.Rocks/Curry.cs
	* mklambda, mktuple: Refactor/rewrite using Generator.pm.
	* Makefile: Generate Mono.Rocks/Curry.cs.
	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Curry.cs 
	  to the build.
	* Mono>Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/CurryTest.cs to the build.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.csproj, Mono.Rocks.dll.sources: Add Lambda.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  LambdaTest.cs to the build.
	* Makefile: Generate Mono.Rocks/Lambda.cs from mklambda.
	* mklambda: Added; Lambda.cs generation program.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* . (svn:ignore): Add files to ignore.
	* doc/Makefile.include: cleanup warnings from `make clean` in topdir.
	* Makefile: Add check-gendarme target, to check Mono.Rocks.dll for coding
	  warnings/errors with Gendarme.
	* gendarme.ignore: List of Gendarme warnings to ignore.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* ., doc, Tests (svn:ignore): Add files to ignore.

2008-08-17  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.csproj, Mono.Rocks.dll.sources: Add Int16.cs, Int64.cs,
	  UInt16.cs, UInt32.cs, UInt64.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Int16Test.cs, Int64Test.cs, UInt16Test.cs, UInt32Test.cs, UInt64Test.cs.

2008-08-14  Jonathan Pryor  <jpryor@novell.com>

	* mktuples: Change method parameter names to please Gendarme.

2008-08-08  Jonathan Pryor  <jpryor@novell.com>

	* Tests/Mono.Rocks.Tests.csproj: Add additional tests.
	* Mono.Rocks.sln: Add doc/doc.mdproj to the build.
	* doc/doc.mdproj: Added; project file to build documentation.
	* doc/ndesk-options-docs.source: Renamed to doc/mono-rocks-docs.source.