@@ -8,6 +8,7 @@
 ./Mono.Rocks/Int64.cs
 ./Mono.Rocks/KeyValuePair.cs
 ./Mono.Rocks/Lambda.cs
+./Mono.Rocks/Lambdas.cs
 ./Mono.Rocks/NaturalStringComparer.cs
 ./Mono.Rocks/Sequence.cs
 ./Mono.Rocks/Stream.cs
