@@ -1,5 +1,10 @@
 2008-08-19  Jonathan Pryor  <jpryor@novell.com>
 
+	* Lambda.cs: Rename to Lambdas.cs, and add a new Lambda.cs which
+	  contains a new hand-written Lambda helper, RecFunc().
+
+2008-08-19  Jonathan Pryor  <jpryor@novell.com>
+
 	* Curry.cs: Added; currying extension methods for Action, Func.
 	* Lambda.cs, Tuples.cs: Flush (minor changes due to rewrites of 
 	  mklambda and mktuple
